fret-electron/app/parser/RequirementParser.js
// Generated from Requirement.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var RequirementListener = require('./RequirementListener').RequirementListener;
var grammarFileName = "Requirement.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'requirement'", "':'", "'.'", "','", "'!'",
                     "'~'", "'&'", "'|'", "'->'", "'=>'", "'<->'", "'<=>'",
                     "'('", "')'", "'true'", "'false'", "'^'", "'-'", "'*'",
                     "'/'", "'+'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null,
                      null, null, null, null, null, null, null, null, null,
                      null, null, null, null, "AFTER", "ALWAYS", "AND",
                      "AT", "BEFORE", "DURING", "EVENTUALLY", "EXCEPT",
                      "FALSE", "FOR", "HOUR", "IF", "IMMEDIATELY", "IN",
                      "IS", "MICROSECOND", "MILLISECOND", "MINUTE", "MOD",
                      "MODE", "NEVER", "NEXT", "NOT", "ONLY", "OR", "SATISFY",
                      "SECOND", "SHALL", "THE", "THEN", "TICK", "TIMEPOINT",
                      "TRUE", "UNLESS", "UNTIL", "UPON", "WHEN", "WHERE",
                      "WHILE", "WITHIN", "XOR", "STRING", "RELATIONAL_OP",
                      "NUMBER", "DIGITS", "ID", "REQT_ID", "WS" ];

var ruleNames =  [ "reqts", "reqt", "reqt_body", "freeform", "nasa", "scope",
                   "reqt_condition", "regular_condition", "qualifier_word",
                   "qualified_condition1", "qualified_condition2", "scope_condition",
                   "scope_mode", "pre_condition", "stop_condition", "component",
                   "response", "satisfaction", "timing", "timing_aux", "duration_upper",
                   "duration_lower", "component_name", "mode_name", "duration",
                   "timeunit", "post_condition", "bool_expr", "numeric_expr" ];

function RequirementParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

RequirementParser.prototype = Object.create(antlr4.Parser.prototype);
RequirementParser.prototype.constructor = RequirementParser;

Object.defineProperty(RequirementParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

RequirementParser.EOF = antlr4.Token.EOF;
RequirementParser.T__0 = 1;
RequirementParser.T__1 = 2;
RequirementParser.T__2 = 3;
RequirementParser.T__3 = 4;
RequirementParser.T__4 = 5;
RequirementParser.T__5 = 6;
RequirementParser.T__6 = 7;
RequirementParser.T__7 = 8;
RequirementParser.T__8 = 9;
RequirementParser.T__9 = 10;
RequirementParser.T__10 = 11;
RequirementParser.T__11 = 12;
RequirementParser.T__12 = 13;
RequirementParser.T__13 = 14;
RequirementParser.T__14 = 15;
RequirementParser.T__15 = 16;
RequirementParser.T__16 = 17;
RequirementParser.T__17 = 18;
RequirementParser.T__18 = 19;
RequirementParser.T__19 = 20;
RequirementParser.T__20 = 21;
RequirementParser.AFTER = 22;
RequirementParser.ALWAYS = 23;
RequirementParser.AND = 24;
RequirementParser.AT = 25;
RequirementParser.BEFORE = 26;
RequirementParser.DURING = 27;
RequirementParser.EVENTUALLY = 28;
RequirementParser.EXCEPT = 29;
RequirementParser.FALSE = 30;
RequirementParser.FOR = 31;
RequirementParser.HOUR = 32;
RequirementParser.IF = 33;
RequirementParser.IMMEDIATELY = 34;
RequirementParser.IN = 35;
RequirementParser.IS = 36;
RequirementParser.MICROSECOND = 37;
RequirementParser.MILLISECOND = 38;
RequirementParser.MINUTE = 39;
RequirementParser.MOD = 40;
RequirementParser.MODE = 41;
RequirementParser.NEVER = 42;
RequirementParser.NEXT = 43;
RequirementParser.NOT = 44;
RequirementParser.ONLY = 45;
RequirementParser.OR = 46;
RequirementParser.SATISFY = 47;
RequirementParser.SECOND = 48;
RequirementParser.SHALL = 49;
RequirementParser.THE = 50;
RequirementParser.THEN = 51;
RequirementParser.TICK = 52;
RequirementParser.TIMEPOINT = 53;
RequirementParser.TRUE = 54;
RequirementParser.UNLESS = 55;
RequirementParser.UNTIL = 56;
RequirementParser.UPON = 57;
RequirementParser.WHEN = 58;
RequirementParser.WHERE = 59;
RequirementParser.WHILE = 60;
RequirementParser.WITHIN = 61;
RequirementParser.XOR = 62;
RequirementParser.STRING = 63;
RequirementParser.RELATIONAL_OP = 64;
RequirementParser.NUMBER = 65;
RequirementParser.DIGITS = 66;
RequirementParser.ID = 67;
RequirementParser.REQT_ID = 68;
RequirementParser.WS = 69;

RequirementParser.RULE_reqts = 0;
RequirementParser.RULE_reqt = 1;
RequirementParser.RULE_reqt_body = 2;
RequirementParser.RULE_freeform = 3;
RequirementParser.RULE_nasa = 4;
RequirementParser.RULE_scope = 5;
RequirementParser.RULE_reqt_condition = 6;
RequirementParser.RULE_regular_condition = 7;
RequirementParser.RULE_qualifier_word = 8;
RequirementParser.RULE_qualified_condition1 = 9;
RequirementParser.RULE_qualified_condition2 = 10;
RequirementParser.RULE_scope_condition = 11;
RequirementParser.RULE_scope_mode = 12;
RequirementParser.RULE_pre_condition = 13;
RequirementParser.RULE_stop_condition = 14;
RequirementParser.RULE_component = 15;
RequirementParser.RULE_response = 16;
RequirementParser.RULE_satisfaction = 17;
RequirementParser.RULE_timing = 18;
RequirementParser.RULE_timing_aux = 19;
RequirementParser.RULE_duration_upper = 20;
RequirementParser.RULE_duration_lower = 21;
RequirementParser.RULE_component_name = 22;
RequirementParser.RULE_mode_name = 23;
RequirementParser.RULE_duration = 24;
RequirementParser.RULE_timeunit = 25;
RequirementParser.RULE_post_condition = 26;
RequirementParser.RULE_bool_expr = 27;
RequirementParser.RULE_numeric_expr = 28;


function ReqtsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_reqts;
    return this;
}

ReqtsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReqtsContext.prototype.constructor = ReqtsContext;

ReqtsContext.prototype.reqt = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ReqtContext);
    } else {
        return this.getTypedRuleContext(ReqtContext,i);
    }
};

ReqtsContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterReqts(this);
	}
};

ReqtsContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitReqts(this);
	}
};




RequirementParser.ReqtsContext = ReqtsContext;

RequirementParser.prototype.reqts = function() {

    var localctx = new ReqtsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, RequirementParser.RULE_reqts);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 59;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 58;
            this.reqt();
            this.state = 61;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(_la===RequirementParser.T__0);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ReqtContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_reqt;
    return this;
}

ReqtContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ReqtContext.prototype.constructor = ReqtContext;

ReqtContext.prototype.reqt_body = function() {
    return this.getTypedRuleContext(Reqt_bodyContext,0);
};

ReqtContext.prototype.DIGITS = function() {
    return this.getToken(RequirementParser.DIGITS, 0);
};

ReqtContext.prototype.ID = function() {
    return this.getToken(RequirementParser.ID, 0);
};

ReqtContext.prototype.REQT_ID = function() {
    return this.getToken(RequirementParser.REQT_ID, 0);
};

ReqtContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterReqt(this);
	}
};

ReqtContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitReqt(this);
	}
};




RequirementParser.ReqtContext = ReqtContext;

RequirementParser.prototype.reqt = function() {

    var localctx = new ReqtContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, RequirementParser.RULE_reqt);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 63;
        this.match(RequirementParser.T__0);
        this.state = 64;
        _la = this._input.LA(1);
        if(!(((((_la - 66)) & ~0x1f) == 0 && ((1 << (_la - 66)) & ((1 << (RequirementParser.DIGITS - 66)) | (1 << (RequirementParser.ID - 66)) | (1 << (RequirementParser.REQT_ID - 66)))) !== 0))) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
        this.state = 65;
        this.match(RequirementParser.T__1);
        this.state = 66;
        this.reqt_body();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function Reqt_bodyContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_reqt_body;
    return this;
}

Reqt_bodyContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Reqt_bodyContext.prototype.constructor = Reqt_bodyContext;

Reqt_bodyContext.prototype.nasa = function() {
    return this.getTypedRuleContext(NasaContext,0);
};

Reqt_bodyContext.prototype.freeform = function() {
    return this.getTypedRuleContext(FreeformContext,0);
};

Reqt_bodyContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterReqt_body(this);
	}
};

Reqt_bodyContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitReqt_body(this);
	}
};




RequirementParser.Reqt_bodyContext = Reqt_bodyContext;

RequirementParser.prototype.reqt_body = function() {

    var localctx = new Reqt_bodyContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, RequirementParser.RULE_reqt_body);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 70;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case RequirementParser.AFTER:
        case RequirementParser.AND:
        case RequirementParser.BEFORE:
        case RequirementParser.DURING:
        case RequirementParser.EXCEPT:
        case RequirementParser.IF:
        case RequirementParser.IN:
        case RequirementParser.ONLY:
        case RequirementParser.SHALL:
        case RequirementParser.THE:
        case RequirementParser.UNLESS:
        case RequirementParser.UPON:
        case RequirementParser.WHEN:
        case RequirementParser.WHERE:
        case RequirementParser.WHILE:
        case RequirementParser.ID:
            this.state = 68;
            this.nasa();
            break;
        case RequirementParser.STRING:
            this.state = 69;
            this.freeform();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 73;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RequirementParser.T__2) {
            this.state = 72;
            this.match(RequirementParser.T__2);
        }

    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function FreeformContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_freeform;
    return this;
}

FreeformContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
FreeformContext.prototype.constructor = FreeformContext;

FreeformContext.prototype.STRING = function() {
    return this.getToken(RequirementParser.STRING, 0);
};

FreeformContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterFreeform(this);
	}
};

FreeformContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitFreeform(this);
	}
};




RequirementParser.FreeformContext = FreeformContext;

RequirementParser.prototype.freeform = function() {

    var localctx = new FreeformContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, RequirementParser.RULE_freeform);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 75;
        this.match(RequirementParser.STRING);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function NasaContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_nasa;
    return this;
}

NasaContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
NasaContext.prototype.constructor = NasaContext;

NasaContext.prototype.response = function() {
    return this.getTypedRuleContext(ResponseContext,0);
};

NasaContext.prototype.component = function() {
    return this.getTypedRuleContext(ComponentContext,0);
};

NasaContext.prototype.SHALL = function() {
    return this.getToken(RequirementParser.SHALL, 0);
};

NasaContext.prototype.scope = function() {
    return this.getTypedRuleContext(ScopeContext,0);
};

NasaContext.prototype.reqt_condition = function() {
    return this.getTypedRuleContext(Reqt_conditionContext,0);
};

NasaContext.prototype.timing = function() {
    return this.getTypedRuleContext(TimingContext,0);
};

NasaContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterNasa(this);
	}
};

NasaContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitNasa(this);
	}
};




RequirementParser.NasaContext = NasaContext;

RequirementParser.prototype.nasa = function() {

    var localctx = new NasaContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, RequirementParser.RULE_nasa);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 78;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
        if(la_===1) {
            this.state = 77;
            this.scope();

        }
        this.state = 81;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if(_la===RequirementParser.AND || ((((_la - 33)) & ~0x1f) == 0 && ((1 << (_la - 33)) & ((1 << (RequirementParser.IF - 33)) | (1 << (RequirementParser.UNLESS - 33)) | (1 << (RequirementParser.UPON - 33)) | (1 << (RequirementParser.WHEN - 33)) | (1 << (RequirementParser.WHERE - 33)))) !== 0)) {
            this.state = 80;
            this.reqt_condition();
        }

        this.state = 88;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case RequirementParser.THE:
        case RequirementParser.ID:
            this.state = 83;
            this.component();
            this.state = 84;
            this.match(RequirementParser.SHALL);
            break;
        case RequirementParser.SHALL:
            this.state = 86;
            this.match(RequirementParser.SHALL);
            this.state = 87;
            this.component();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
        this.state = 91;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << RequirementParser.T__3) | (1 << RequirementParser.AFTER) | (1 << RequirementParser.ALWAYS) | (1 << RequirementParser.AT) | (1 << RequirementParser.BEFORE) | (1 << RequirementParser.EVENTUALLY) | (1 << RequirementParser.FOR))) !== 0) || ((((_la - 34)) & ~0x1f) == 0 && ((1 << (_la - 34)) & ((1 << (RequirementParser.IMMEDIATELY - 34)) | (1 << (RequirementParser.NEVER - 34)) | (1 << (RequirementParser.UNTIL - 34)) | (1 << (RequirementParser.WITHIN - 34)))) !== 0)) {
            this.state = 90;
            this.timing();
        }

        this.state = 93;
        this.response();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function ScopeContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = RequirementParser.RULE_scope;
    return this;
}

ScopeContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ScopeContext.prototype.constructor = ScopeContext;

ScopeContext.prototype.ONLY = function() {
    return this.getToken(RequirementParser.ONLY, 0);
};

ScopeContext.prototype.EXCEPT = function() {
    return this.getToken(RequirementParser.EXCEPT, 0);
};

ScopeContext.prototype.IN = function() {
    return this.getToken(RequirementParser.IN, 0);
};

ScopeContext.prototype.scope_mode = function() {
    return this.getTypedRuleContext(Scope_modeContext,0);
};

ScopeContext.prototype.UNLESS = function() {
    return this.getToken(RequirementParser.UNLESS, 0);
};

ScopeContext.prototype.WHILE = function() {
    return this.getToken(RequirementParser.WHILE, 0);
};

ScopeContext.prototype.scope_condition = function() {
    return this.getTypedRuleContext(Scope_conditionContext,0);
};

ScopeContext.prototype.WHEN = function() {
    return this.getToken(RequirementParser.WHEN, 0);
};

ScopeContext.prototype.IF = function() {
    return this.getToken(RequirementParser.IF, 0);
};

ScopeContext.prototype.DURING = function() {
    return this.getToken(RequirementParser.DURING, 0);
};

ScopeContext.prototype.AFTER = function() {
    return this.getToken(RequirementParser.AFTER, 0);
};

ScopeContext.prototype.BEFORE = function() {
    return this.getToken(RequirementParser.BEFORE, 0);
};

ScopeContext.prototype.NOT = function() {
    return this.getToken(RequirementParser.NOT, 0);
};

ScopeContext.prototype.enterRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.enterScope(this);
	}
};

ScopeContext.prototype.exitRule = function(listener) {
    if(listener instanceof RequirementListener ) {
        listener.exitScope(this);
	}
};




RequirementParser.ScopeContext = ScopeContext;

RequirementParser.prototype.scope = function() {

    var localctx = new ScopeContext(this, this._ctx, this.state);
    this.enterRule(localctx, 10, RequirementParser.RULE_scope);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 144;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case RequirementParser.ONLY:
            this.state = 95;
            this.match(RequirementParser.ONLY);
            this.state = 111;
            this._errHandler.sync(this);
            switch(this._input.LA(1)) {
            case RequirementParser.DURING:
            case RequirementParser.IF:
            case RequirementParser.IN:
            case RequirementParser.WHEN:
                this.state = 101;
                this._errHandler.sync(this);
                switch(this._input.LA(1)) {
                case RequirementParser.DURING:
                    this.state = 96;
                    this.match(RequirementParser.DURING);
                    break;
                case RequirementParser.IF:
                case RequirementParser.IN:
                case RequirementParser.WHEN:
                    this.state = 98;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===RequirementParser.IF || _la===RequirementParser.WHEN) {
                        this.state = 97;
                        _la = this._input.LA(1);
                        if(!(_la===RequirementParser.IF || _la===RequirementParser.WHEN)) {
                        this._errHandler.recoverInline(this);
                        }
                        else {
                        	this._errHandler.reportMatch(this);
                            this.consume();
                        }
                    }
